asm_tests/other_testfiles/invalid_files/error33.s
.name "MORO"
.comment "MORJESTA!"

sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3

sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3

sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3

sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3

sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3

sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3

sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3

sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3

sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3
sti r1, r2, r3

sti r1, r2, r3
live %0
